# statement-extract

./: .gitignore  BUG.md  flake.nix  pyproject.toml
src/bank_pdf_extract/: __init__.py  archive.py  cli.py  csv_ingest.py  detect.py  schema.py
src/bank_pdf_extract/parsers/: __init__.py  _holders.py  amex_cobalt.py  bmo_credit_card.py  bmo_deposit_account.py  coast_capital_chequing.py  coast_capital_credit.py  eq_bank.py
